# docs/swagger.json
@@ -91,6 +91,42 @@
                 }
             }
         },
+        "/actors/{actor_id}": {
+            "get": {
+                "description": "Get actor films by actor_id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Actor"
+                ],
+                "summary": "Get actor films",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "actor_id",
+                        "name": "actor_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.GetFilmActorsResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/actors/{id}": {
             "get": {
                 "description": "Get actor by id",
@@ -263,6 +299,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "search by actor",
+                        "name": "search_by_actor",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "format": "page",
                         "description": "page number",
@@ -275,6 +317,12 @@
                         "description": "number of elements per page",
                         "name": "limit",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "order by title, rating, release_date",
+                        "name": "order_by",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -282,6 +330,42 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.FilmsListResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/films/{film_id}": {
+            "get": {
+                "description": "Get film actors by film_id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Film"
+                ],
+                "summary": "Get film actors",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "film_id",
+                        "name": "film_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.GetFilmActorsResp"
                         }
                     },
                     "500": {
@@ -518,6 +602,9 @@
                 "deleted_at": {
                     "type": "string"
                 },
+                "film": {
+                    "$ref": "#/definitions/models.Film"
+                },
                 "film_id": {
                     "type": "string"
                 },
@@ -559,6 +646,20 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.Film"
+                    }
+                }
+            }
+        },
+        "models.GetFilmActorsResp": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "film_actors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Actor"
                     }
                 }
             }
