# internal/repo/delivery/http/routes.go
@@ -16,7 +16,7 @@ func MapActorsRoutes(group *echo.Group, h repos.ActorHandlers) {
 	group.PUT("/:id", h.Update())
 	group.GET("/list", h.GetAll())
 	group.GET("/:id", h.GetByID())
-
+	group.GET("/:actor_id", h.GetActorFilms())
 }
 
 // Map actors routes
@@ -26,4 +26,5 @@ func MapFilmRoutes(group *echo.Group, h repos.FilmHandlers) {
 	group.DELETE("/:id", h.Delete())
 	group.PUT("/:id", h.Update())
 	group.GET("/:id", h.GetByID())
+	group.GET("/:film_id", h.GetFilmActors())
 }
